--- a/simple_ann.ipynb
+++ b/simple_ann.ipynb
@@ -2,7 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "78812829-dc93-431b-b13c-e9fd1725f6c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_padding(dataset=None, pad_width = 0, constant_values=0) -> []:\n",
+    "    padded_dataset = []\n",
+    "    \n",
+    "    for i in dataset:\n",
+    "        padded = np.pad(i, pad_width=pad_width, mode='constant', constant_values=constant_values)\n",
+    "        padded_dataset.append(padded[:, :, np.newaxis])\n",
+    "    \n",
+    "    return padded_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "bdfc1a70-af4b-47c6-b2fa-b019a5af5bf6",
    "metadata": {},
    "outputs": [],
