finished the algorithm

--- a/SimpleANN.ipynb
+++ b/SimpleANN.ipynb
@@ -48,18 +48,6 @@
     "        padded_dataset.append(padded[:, :, np.newaxis])\n",
     "    \n",
     "    return padded_dataset\n",
-    "\n",
-    "def extract_features(dataset):\n",
-    "    features = []\n",
-    "\n",
-    "    for x in tqdm(dataset):\n",
-    "        p = np.repeat(x, 3, axis=-1)\n",
-    "        p = preprocess_input(p)\n",
-    "        predict = np.expand_dims(p, axis=0)\n",
-    "        predict = model.predict(predict)\n",
-    "        features.append(predict[0][0][0])\n",
-    "    \n",
-    "    return features\n",
     "    \n",
     "def write_matrix_to_file(matrix=None, file_name=\"random.txt\"):\n",
     "    with open(file_name, 'wb') as f:\n",
@@ -82,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f6543e9f-a19f-4bb3-a7e4-a10ae34d75b0",
    "metadata": {},
    "outputs": [],
@@ -101,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b7511c45-9448-45df-b390-6e8416b2de87",
    "metadata": {},
    "outputs": [],
@@ -110,60 +98,12 @@
     "\n",
     "model.add(Dense(1024, input_shape=(dim_data,)))\n",
     "model.add(Dropout(0.05))\n",
-    "model.add(Dense(512, activation='relu'))\n",
+    "model.add(Dense(100, activation='relu'))\n",
     "model.add(Dropout(0.05))\n",
     "model.add(Dense(100, activation='relu'))\n",
     "model.add(Dropout(0.05))\n",
-    "model.add(Dense(512, activation='linear'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "711c009f-8b79-4b72-b613-c141159b5fea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_1\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " dense_4 (Dense)             (None, 1024)              1049600   \n",
-      "                                                                 \n",
-      " dropout_3 (Dropout)         (None, 1024)              0         \n",
-      "                                                                 \n",
-      " dense_5 (Dense)             (None, 512)               524800    \n",
-      "                                                                 \n",
-      " dropout_4 (Dropout)         (None, 512)               0         \n",
-      "                                                                 \n",
-      " dense_6 (Dense)             (None, 100)               51300     \n",
-      "                                                                 \n",
-      " dropout_5 (Dropout)         (None, 100)               0         \n",
-      "                                                                 \n",
-      " dense_7 (Dense)             (None, 512)               51712     \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 1,677,412\n",
-      "Trainable params: 1,677,412\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a3706c2-e725-4485-aec4-0251c6c1d833",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model.add(Dense(512, activation='linear'))\n",
+    "\n",
     "model.compile(loss='mse', \n",
     "              optimizer='adam', \n",
     "              metrics=['mse'])\n",
@@ -179,11 +119,121 @@
     "                    validation_split=0.2, \n",
     "                    callbacks=[earlyStopping])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "44ebe5b0-ad2a-4107-a844-4e038a7cf409",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 8.3651 - mse: 8.3651\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_results = model.evaluate(new_x_train, y_train, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4edb4e33-02c4-47fd-b0a0-b97034a38cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = model.predict(new_x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5204ee31-91e5-4439-bbd5-d0d80610efb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_features = model.predict(new_x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a00db87b-da4a-4787-892c-64f53bed5fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 512)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f6ff3e80-ed90-4844-a1a9-e0e81e82edfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 512)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3c276713-6771-4147-9946-88b06fc9bdea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = np.matrix(train_features)\n",
+    "write_matrix_to_file(train_features, file_name=\"simple_ann_train_features.out\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0a867e92-6bd2-478e-9e88-b4a23ddae90e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_features = np.matrix(test_features)\n",
+    "write_matrix_to_file(test_features, file_name=\"simple_ann_test_features.out\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eef45907-826f-4ad7-8bd5-8ee0e18317ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
