--- a/vgg16.ipynb
+++ b/vgg16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a264fe5c-6e5f-4f64-a1ee-8136f73d48ca",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "65dd27e5-880e-4099-af09-90955a1a8c63",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6453fcdc-9f4a-456d-98df-0413a26b7dc5",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "03ecf1eb-8a1d-4675-87ad-668a5e9a643b",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4387fada-368a-4cc6-b92a-935e82d04024",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 60000/60000 [57:02<00:00, 17.53it/s]\n"
+      "100%|██████████| 60000/60000 [29:52<00:00, 33.47it/s]\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "735c844f-36f4-4bcd-b756-ce311f7b679f",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 10000/10000 [08:56<00:00, 18.65it/s]\n"
+      "100%|██████████| 10000/10000 [05:04<00:00, 32.87it/s]\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "f6707d39-23d1-4fe9-ad89-10787e4965ec",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "e2a4d523-b4d8-465c-9021-8adb574dfcab",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94d6787-6575-407c-991c-0b6ee0cba393",
+   "id": "94cea360-50e2-46b9-a1ea-2632f5ceed00",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -155,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
